--- a/dms-documents-api/src/main/resources/application.properties
+++ b/dms-documents-api/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.port=9001
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 keycloak.auth-server-url=http://localhost:8180/auth
-keycloak.realm=Document Management System
+keycloak.realm=DocumentManagementSystem
 keycloak.resource=dms-api
 keycloak.public-client=true
