--- a/dms-admin-api/src/main/resources/application.properties
+++ b/dms-admin-api/src/main/resources/application.properties
@@ -3,6 +3,16 @@ server.port=9000
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 keycloak.auth-server-url=http://localhost:8180/auth
-keycloak.realm=Document Management System
+keycloak.realm=DocumentManagementSystem
 keycloak.resource=dms-api
 keycloak.public-client=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/CloudStorage?serverTimezone=Europe/Belgrade
+spring.datasource.username=root
+spring.datasource.password=amazing284,
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format-sql=true
+spring.jpa.open-in-view=false
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
