--- a/dms-documents-api/src/main/resources/application.properties
+++ b/dms-documents-api/src/main/resources/application.properties
@@ -6,3 +6,13 @@ keycloak.auth-server-url=http://localhost:8180/auth
 keycloak.realm=DocumentManagementSystem
 keycloak.resource=dms-api
 keycloak.public-client=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/CloudStorage?serverTimezone=Europe/Belgrade
+spring.datasource.username=root
+spring.datasource.password=amazing284,
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format-sql=true
+spring.jpa.open-in-view=false
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
